# talks

./: README.md
Shenanigans/: CMakeLists.txt  Readme.md  Shenanigans.html  dataset1.cpp.erb  dataset2.cpp.erb  debugSample.cpp  developingTemplateCode.txt  error.txt  test.cpp
alice/: CMakeLists.txt  alice.cpp
